--- a/Final_sprint.ipynb
+++ b/Final_sprint.ipynb
@@ -564,15 +564,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
    ]
   },
   {
@@ -628,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -644,6 +642,8 @@
     }
    ],
    "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
     "# Modèle Naive Bayes\n",
     "nb_model = GaussianNB()\n",
     "nb_model.fit(X_train, y_train)\n",
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -684,6 +684,8 @@
     }
    ],
    "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "# Modèle Régression Logistique (Softmax)\n",
     "log_reg = LogisticRegression(multi_class='multinomial', solver='lbfgs', max_iter=1000)\n",
     "log_reg.fit(X_train, y_train)\n",
